# pyqrfactorydiscogs

./: .env.example  .gitignore  .mise.toml  FINAL_SUMMARY.txt  IMPLEMENTATION_SUMMARY.md  README.md  discogs_api_client.py  generate_oauth_tokens.py  generated_collection.csv  pyproject.toml  requirements.txt  test_auth_flow.py  test_flask_app.py  test_workflow.py
app/: __init__.py  routes.py
app/templates/: base.html  editable_preview.html  folders.html  index.html  landing.html  oauth_callback.html  preview.html  releases.html
example/: example_qrfactor3_expected_csv_format.csv
plans/: flask_app_plan.md
services/: discogs_api_client.py  discogs_collection_processor.py
templates/: qrfactory_discogs_collection_template.csv
tests/: conftest.py
tests/integration/: test_flask_app.py  test_workflow.py
tests/legacy/: test_auth_flow.py  test_flask_app.py  test_workflow.py
tests/unit/: test_discogs_api_client.py  test_discogs_collection_processor.py
