[project]
name = "pyqrfactorydiscogs"
version = "0.0.1"
description = "Generate CSV for QR Factory 3 from a Discogs collection"
authors = [
    {name = "Bram", email = "dev@bollewolle.be"}
]
requires-python = ">=3.14"
dependencies = [
    "Flask>=3.0.0",
    "Werkzeug>=3.0.0",
    "Jinja2>=3.1.0",
    "itsdangerous>=2.1.0",
    "click>=8.0.0",
    "python3-discogs-client>=2.8",
    "python-dotenv>=1.2.1",
]
